--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="manifest" href="/manifest.webmanifest" />
         <meta name="theme-color" content="#0f172a" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
         <link rel="apple-touch-icon" href="/universal.png" />
 
         <!-- Open Graph (Facebook, Discord, LinkedIn, etc.) -->
